<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_password_screen"
        android:id="@+id/title_password_screen_textview"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/password_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email_hint"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_email_edit_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:id="@+id/login_password_edit_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_email_button"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook_button_text"
            android:layout_marginBottom="20dp"
            android:id="@+id/login_facebook_button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>